# Racing-Car-Katas

./: .gitignore  README  README.md
C/: alarm.c  alarm.h  alarm.tests.cpp  makefile  sensor.c  sensor.h
CSharp/: TDDMicroExercises.csproj  TDDMicroExercises.sln
CSharp/LeaderBoard/: Driver.cs  Leaderboard.cs  Race.cs  SelfDrivingCar.cs
CSharp/Leaderboard.Tests/: LeaderboardTest.cs  (+2 more)
Cpp/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  meson.build  meson_build.sh  run-once-cmake.sh
Cpp/LeaderBoard/: CMakeLists.txt  meson.build
Cpp/LeaderBoard/include/: Driver.h  LeaderBoard.h  Race.h
Cpp/LeaderBoard/source/: Driver.cpp  LeaderBoard.cpp
Cpp/LeaderBoard/tests/: CMakeLists.txt  LeaderBoard_Test.cpp
Cpp/Source/LeaderBoard/: CMakeLists.txt
Cpp/Source/LeaderBoard.Test/: CMakeLists.txt
Cpp/Source/LeaderBoard.Test/include/: TestData.h
Cpp/Source/LeaderBoard/source/: Race.cpp  SelfDrivingCar.cpp
Cpp/Source/TelemetrySystem.Test/: CMakeLists.txt
Cpp/Source/TextConverter/: CMakeLists.txt
Cpp/Source/TextConverter.Test/: CMakeLists.txt
Cpp/Source/TextConverter.Test/source/: HtmlPagesConverterTest.cpp  HtmlTextConverterTest.cpp  main.cpp
Cpp/Source/TextConverter/include/: HtmlTextConverter.h  StringEscapeUtils.h
Cpp/Source/TextConverter/source/: HtmlTextConverter.cpp
Cpp/Source/TirePressureMonitoring.Test/source/: AlarmTest.cpp
Cpp/Source/TirePressureMonitoring/include/: Alarm.h
Cpp/Source/TirePressureMonitoring/source/: Alarm.cpp
Cpp/Source/TurnTicketDispenser/: CMakeLists.txt
Cpp/Source/TurnTicketDispenser.Test/: CMakeLists.txt
Cpp/Source/TurnTicketDispenser.Test/source/: TurnTicketDispenserTest.cpp
Cpp/Source/TurnTicketDispenser/include/: TurnTicket.h
Cpp/TelemetrySystem/: CMakeLists.txt  meson.build  telemetry.cpp  telemetry.hpp
Cpp/TelemetrySystem/include/: TelemetryClient.h  TelemetryDiagnosticControls.h
Cpp/TelemetrySystem/tests/: CMakeLists.txt  TelemetryDiagnosticControls_Test.cpp  TelemetryDiagnosticControls_catch.cpp
Cpp/TextConverter/: CMakeLists.txt  meson.build
Cpp/TextConverter/source/: HtmlPagesConverter.cpp
Cpp/TextConverter/tests/: CMakeLists.txt  HtmlPageConverter_Test.cpp  HtmlPageConverter_catch.cpp  HtmlTextConverter_Test.cpp  HtmlTextConverter_catch.cpp
Cpp/TirePressureMonitoring/: Alarm.hpp  CMakeLists.txt  README.md  alarm.cpp  meson.build  sensor.cpp  sensor.hpp
Cpp/TirePressureMonitoring/CMakeModules/: FindCppUnit.cmake
Cpp/TirePressureMonitoring/include/: Sensor.h  alarm.h  sensor.h
Cpp/TirePressureMonitoring/src/: CMakeLists.txt  alarm.cpp  sensor.cpp
Cpp/TirePressureMonitoring/tests/: Alarm_Test.cpp  Alarm_catch.cpp  CMakeLists.txt
Cpp/TirePressureMonitoring/tst/: CMakeLists.txt  alarm_test.cpp  alarm_test.h  main.cpp  sensor_test.cpp  sensor_test.h
Cpp/TurnTicketDispenser/: CMakeLists.txt  meson.build
Cpp/TurnTicketDispenser/include/: TicketDispenser.h  TurnNumberSequence.h  TurnTicket.h
Cpp/TurnTicketDispenser/source/: TicketDispenser.cpp  TurnNumberSequence.cpp  TurnTicket.cpp
Cpp/TurnTicketDispenser/tests/: CMakeLists.txt  TicketDispenser_Test.cpp  TicketDispenser_catch.cpp
Cpp/cmake_version/Source/: CMakeLists.txt
Cpp/cmake_version/Source/LeaderBoard.Test/source/: LeaderBoardTest.cpp  RaceTest.cpp  TestData.cpp
Cpp/cmake_version/Source/LeaderBoard/include/: SelfDrivingCar.h
Cpp/cmake_version/Source/TelemetrySystem/: CMakeLists.txt
Cpp/cmake_version/Source/TelemetrySystem.Test/source/: TelemetryDiagnosticControlsTest.cpp
Cpp/cmake_version/Source/TelemetrySystem/include/: TelemetryClient.h  TelemetryDiagnosticControls.h
Cpp/cmake_version/Source/TelemetrySystem/source/: TelemetryClient.cpp  TelemetryDiagnosticControls.cpp
Cpp/cmake_version/Source/TextConverter/include/: HtmlPagesConverter.h
Cpp/cmake_version/Source/TirePressureMonitoring/: CMakeLists.txt
Cpp/cmake_version/Source/TirePressureMonitoring.Test/: CMakeLists.txt
Cpp/cmake_version/Source/TirePressureMonitoring/include/: Alarm.h
Cpp/cmake_version/Source/TirePressureMonitoring/source/: Alarm.cpp  Sensor.cpp
Cpp/cmake_version/Source/TurnTicketDispenser/include/: TicketDispenser.h  TurnNumberSequence.h
Cpp/cmake_version/Source/TurnTicketDispenser/source/: TurnNumberSequence.cpp  TurnTicket.cpp
Cpp/gmock_version/textconverter/: HtmlTextConverter.cpp  HtmlTextConverter.hpp  HtmlTextConverter.tests.cpp  StreamConverter.cpp  StreamConverter.hpp  StreamConverter.tests.cpp  StringEscapeUtils.hpp  instructions.txt  test
Cpp/gmock_version/tyrepressure/: Alarm.cpp  Alarm.hpp  Alarm.tests.cpp  CMakeLists.txt  PressureSensor.cpp  PressureSensor.hpp  Sensor.hpp  StubSensor.hpp  makefile  test
Cpp/gtest_version/leaderboard/: Driver.cpp  Driver.hpp  Leaderboard.cpp  Leaderboard.hpp  Leaderboard.tests.cpp  Race.cpp  Race.hpp  Race.tests.cpp  SelfDrivingCar.cpp  SelfDrivingCar.hpp  TestData.cpp  TestData.hpp
Cpp/gtest_version/telemetrydiagnostics/: Telemetry.tests.cpp  TelemetryClient.cpp  TelemetryClient.hpp  TelemetryDiagnosticControls.cpp  TelemetryDiagnosticControls.hpp
Cpp/gtest_version/textconverter/: HtmlTextConverter.cpp  HtmlTextConverter.hpp  HtmlTextConverter.tests.cpp
Cpp/gtest_version/turnticket/: TicketDispenser.cpp  TicketDispenser.hpp  TicketDispenser.tests.cpp  TurnNumberSequence.cpp  TurnNumberSequence.hpp  TurnTicket.cpp  TurnTicket.hpp  makefile
Cpp/gtest_version/tyrepressure/: Alarm.cpp  Alarm.hpp  Alarm.tests.cpp  Sensor.cpp  Sensor.hpp
Cpp/subprojects/: catch2.wrap
Java/: .gitignore  pom.xml
Javascript/: .gitignore  package-lock.json  package.json  spec.runner.html
Paper/: TDD.Review.doc
Questionnaire/: README  README.md
Ruby/: Gemfile
Swift/: Package.swift
TDDMicroExercises/: README  README.md
TDDMicroExercises.ProposedSolution/: README.md
TDDMicroExercises.YoursSolutions/: README.md
TDDMicroExercisesTest/: TDDMicroExercisesTest.csproj  packages.config
TypeScript/: .gitignore  package.json  tsconfig.json  tslint.json
go/: go.mod
php/: .gitignore  README.md  composer.json  ecs.php  ecs.yaml  phpstan.neon  phpunit.xml  pu.bat
scala/: build.sbt
(+459 files in other folders)
